# rust-web-clean-layout

./: Cargo.toml  README.md
libraries/automation/: Cargo.toml
libraries/configuration/: Cargo.toml
libraries/utility/: Cargo.toml
services/web_server/: Cargo.toml
test/research/: copilot-testing.md
